--- a/wh.css
+++ b/wh.css
@@ -1,5 +1,5 @@
 *{
-    font-family: "Open Sans", sans-serif;
+    font-family: "Figtree", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -42,7 +42,7 @@
     background-image: url(Untitled_design_1_-removebg-preview.png);
     background-position: center;
     background-color: #151516;
-    transition: 1s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 .mid-nav{
     height: 7vh;
@@ -92,7 +92,7 @@
     }
 }
 .sol{
-    width: 10vw;
+    width: 6vw;
     height: 6vh;
     display: flex;
     align-items: center;
@@ -111,8 +111,19 @@
     font-weight: 700;
 }
 
+.arcont{
+    display: flex;
+    position: relative;
+    align-items: center;
+    margin-left: 0.2vw;
+}
 .ri-arrow-up-s-line{
     display: none;
+    position: absolute;
+    
+}
+.ri-arrow-down-s-line{
+    position: absolute;
 }
 
 .sol:hover{
@@ -139,6 +150,7 @@
 }
 .con-us button:hover{
     background-color: #383838;
+    transition-duration: 0.5s;
 }
 @media (max-width:1200px) {
     .con-us button{
