--- a/wh.css
+++ b/wh.css
@@ -165,3 +165,17 @@
         padding: 2vh 1vw;
     }    
 }
+.lmidnav{
+    display: flex;
+}
+.capabilities{
+    width: 6vw;
+    height: 6vh;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+    user-select: none;
+    cursor: pointer;
+}
