--- a/wh.css
+++ b/wh.css
@@ -194,3 +194,29 @@
         display: flex;
     }
 }
+.indus{
+    width: 6vw;
+    height: 6vh;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 12px;
+    font-weight: 600;
+    user-select: none;
+    cursor: pointer;
+    margin-left: 1.5vw;
+}
+.a3cont{
+    display: flex;
+    position: relative;
+    align-items: center;
+    margin-left: 0.2vw;
+}
+.indus:hover{
+        .ri-arrow-down-s-line{
+        opacity: 0;
+    }
+    .ri-arrow-up-s-line{
+        display: flex;
+    }
+}
