--- a/wh.css
+++ b/wh.css
@@ -108,7 +108,6 @@
     position: relative;
 }
 .sol-drop{
-    /* display: none; */
     position: absolute;
     top: 40px;
     left: 0;
@@ -117,18 +116,24 @@
     box-shadow: 0 4px 12px rgba(0,0,0,0.6);
     min-width: 25vw;
     z-index: 1;
-    display: grid;
-    display: none;
-    height: 50vh;
     padding: 2vh 0 0 1vw;
     font-size: 1vw;
-    margin-top: 2vh;
-    
+    height: 50vh;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(10px);
+    /* transition: 0.1s ease-out; */
+}
+.sol:hover .sol-drop {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
 }
 
 .sol-drop a{
         text-decoration: none;
         color: #bbb6b6;
+        display: block;
     }
 .ri-menu-line{
     display: inline-block;
@@ -165,6 +170,9 @@
         background-color: #2a2a2a;
         color: white;
     }
+}
+.sol-drop:hover{
+    display: block;
 }
 .con-us{
     height: 7vh;
