--- a/wh.css
+++ b/wh.css
@@ -70,10 +70,8 @@
     border: 1.9px solid white;
     transition: 0.5s ease-in;
 }
-@media (max-width:600px) {
-    *{
-        font-size: 5px;
-    }
+@media (max-width:900px) {
+
     .mid-nav{
         display: none;
     }
@@ -96,7 +94,7 @@
 }
 .sol{
     width: 6vw;
-    height: 6vh;
+    height: 6.2vh;
     display: flex;
     align-items: center;
     margin-left: 2vw;
@@ -110,12 +108,12 @@
 .sol-drop{
     position: absolute;
     top: 40px;
-    left: 0;
+    
     background-color: #1c1c1c;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.6);
     min-width: 25vw;
-    z-index: 1;
+    z-index: 3;
     padding: 2vh 0 0 1vw;
     font-size: 1vw;
     height: 50vh;
@@ -171,6 +169,7 @@
         color: white;
     }
 }
+
 .sol-drop:hover{
     display: block;
 }
@@ -258,4 +257,44 @@
     .ri-arrow-up-s-line{
         display: flex;
     }
+}
+.sol1:hover{
+    color: white;
+    
+}
+.sol1::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    width: 40%;        
+    height: 1vh;       
+
+    background: linear-gradient(90deg,
+        #7090dc,
+        #2860e1,
+        #2a51aa
+    );
+
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.4s ease;
+     z-index: -1;
+}
+
+
+
+.sol1:hover::after {
+    transform: scaleX(1);
+}
+.sol1 {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 4px; /* spacing for underline */
+    color: #bbb6b6;
+    user-select: none;
+    cursor: pointer;
+    height: 3vh;
+    z-index: 2;
 }
