--- a/wh.css
+++ b/wh.css
@@ -110,7 +110,7 @@
     top: 40px;
     
     background-color: #1c1c1c;
-    border-radius: 10px;
+    border-radius: 13px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.6);
     min-width: 25vw;
     z-index: 3;
@@ -182,12 +182,13 @@
     color: white;
     background-color: #444444;
     border: none;
-    border-radius: 6px;
+    border-radius: 8px;
     font-weight: 600;
     display: flex;
+    cursor: pointer;
 }
 .con-us button:hover{
-    background-color: #383838;
+    background-color: #2b2b2b;
     transition-duration: 0.5s;
 }
 @media (max-width:1200px) {
@@ -271,10 +272,7 @@
     width: 40%;        
     height: 1vh;       
 
-    background: linear-gradient(90deg,
-        #7090dc,
-        #2860e1,
-        #2a51aa
+    background: linear-gradient(90deg,#2860e1
     );
 
     transform: scaleX(0);
@@ -296,5 +294,39 @@
     user-select: none;
     cursor: pointer;
     height: 3vh;
+    width: 24vw;
     z-index: 2;
+}
+.sol2{
+    position: relative;
+    display: inline-block;
+    padding-bottom: 4px; /* spacing for underline */
+    color: #bbb6b6;
+    user-select: none;
+    cursor: pointer;
+    height: 3vh;
+    z-index: 2;
+}
+.sol2:hover{
+    color: white;
+}
+.sol2::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    width: 43%;        
+    height: 1vh;       
+
+    background: linear-gradient(90deg,#2860e1
+    );
+
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.4s ease;
+     z-index: -1;
+}
+.sol2:hover::after {
+    transform: scaleX(1);
 }
