--- a/wh.css
+++ b/wh.css
@@ -93,11 +93,12 @@
     }
 }
 .sol{
-    width: 6vw;
+    width: 5vw;
     height: 6.2vh;
     display: flex;
     align-items: center;
     margin-left: 2vw;
+    margin-right: 1vw;
     color: white;
     font-size: 12px;
     font-weight: 600;
